# misaka_danmu_server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  danmaku_stats_example.py  docker-compose.mysql.yml  docker-compose.postgres.yml  generated_schema.sql  pyproject.toml  test_danmaku_parser.py  test_generated.sql
alembic/: env.py
alembic/versions/: 20250806_1723_cd88e06f155f_create_initial_postgresql_schema.py
config/: config.yml
docker/mysql/: init.sql
docker/postgres/: init.sql
docs/: crud_analysis.md  database_analysis.md  docker_deployment.md  external_api_analysis.md  fixes_applied.md  project_structure.md  quick_start.md  refactor_overview.md  sqlalchemy_refactor_plan.md
scripts/: .env.template  deploy.py  deploy.sh  docker_deploy.sh  manage.sh  start.bat  start_dev.sh  start_prod.sh
src/: config.py  dependencies.py  main_new.py
src/api/: auth_new.py  ui_new.py
src/database/: __init__.py  engine.py  optimization.py
src/database/models/: __init__.py  anime.py  base.py  episode.py  system.py  user.py
src/database/repositories/: __init__.py  anime.py  base.py  danmaku_parser.py  episode.py  factory.py  system.py  user.py
src/legacy/: __init__.py
src/services/: __init__.py  anime.py  base.py  episode.py  factory.py  user.py
tests/: README.md  pytest.ini
tests/integration/: integration_test.py  integration_test_report.json
tests/phase/: __init__.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
