[project]
name = "misaka-danmu-server"
version = "1.0.0"
description = "御坂网络弹幕服务 - A self-hosted danmaku aggregation and management service"
authors = [
    {name = "l429609201", email = "l429609201@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["danmaku", "bullet-comments", "fastapi", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiomysql", # 保留用于兼容和迁移
    "apscheduler",
    "pydantic-settings",
    "httpx",
    # 使用固定的 passlib 和 bcrypt 版本以避免兼容性问题
    # passlib>=1.7.4 才与 bcrypt>=4.0 兼容
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]",
    "python-multipart",
    # protobuf v4.x 引入了不兼容的变更，可能导致预编译的 _pb2.py 文件解析失败
    # 将其固定到 v3.x 的最后一个稳定版本以确保兼容性
    "protobuf==3.20.3",
    # 用于模糊字符串匹配，提高搜索结果排序的准确性
    "thefuzz",
    "python-Levenshtein",
    # SQLAlchemy 2.0 ORM 重构依赖
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.28.0", # PostgreSQL 异步驱动
    "aiosqlite>=0.19.0", # SQLite 异步驱动
    "pymysql>=1.0.0", # MySQL 同步驱动（Alembic用）
    "psycopg2-binary>=2.9.0", # PostgreSQL 同步驱动（Alembic用）
    "pyjwt>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio", 
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/l429609201/misaka_danmu_server"
Repository = "https://github.com/l429609201/misaka_danmu_server"
Issues = "https://github.com/l429609201/misaka_danmu_server/issues"

[project.scripts]
danmu-server = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
